use_ozone = true
ozone_platform_x11 = false
ozone_platform_drm = true
ozone_platform_headless = false
ozone_platform = "drm"
use_vc4_minigbm = true

ffmpeg_branding = "Chrome"
proprietary_codecs = true
use_v4l2_codec = true
use_v4l2_non_standard = false
use_v4l2_stateless_decoder = false

target_os = "chromeos"
target_cpu = "arm"
use_sysroot = true
target_sysroot = "//build/linux/raspbian_arm-sysroot"
enable_linux_installer = true

google_api_key = "no"
google_default_client_id = "no"
google_default_client_secret = "no"

is_debug = false
is_component_build = false
enable_nacl = false
symbol_level = 0
blink_symbol_level = 0
